# pi-OS

./: .gitignore  Cargo.toml  Makefile  diassem  justfile  kernel_test_runner.sh  qemu-kernel8.img  rust-toolchain.toml
.cargo/: config.toml
01_wait_forever/: Cargo.toml  Makefile
01_wait_forever/src/: console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
01_wait_forever/src/_arch/aarch64/: cpu.rs
01_wait_forever/src/_arch/aarch64/cpu/: boot.rs  boot.s
01_wait_forever/src/bsp/: device_driver.rs  raspberrypi.rs
01_wait_forever/src/bsp/device_driver/: bcm.rs  common.rs  gpio.rs  mini_uart.rs
01_wait_forever/src/bsp/device_driver/bcm/: gpio.rs  mini_uart.rs  uart.rs
01_wait_forever/src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  kernel.ld  memory.rs
01_wait_forever/src/console/: null_console.rs
01_wait_forever/src/synchronization/: spin.rs
X1_JTAG_boot/: Makefile
chainboot_kernel/src/: console.rs  macros.rs  main.rs
chainboot_kernel/src/bsp/device_driver/: gpio.rs  mini_uart.rs
chainboot_kernel/src/bsp/raspberrypi/: driver.rs
chainboot_kernel/src/synchronization/: spin.rs
common/: docker.mk
common/jtag/: Dockerfile  c232hm-ddhsl-0.cfg  raspi4.cfg
common/serial/: minipush.rb  miniterm.rb
common/tests/: exit_code_test.rb
docker/rustembedded-osdev-utils/: Dockerfile  Makefile  c232hm-ddhsl-0.cfg  rpi4.cfg
kernel/: Cargo.toml  Makefile  build.rs
kernel/src/: boot_const.rs  bsp.rs  console.rs  cpu.rs  driver.rs  errno.rs  exception.rs  generics.rs  interrupt.rs  lib.rs  macros.rs  main.rs  memory.rs  panic_wait.rs  print.rs  scheduler.rs  synchronization.rs  utils.rs  wasm.rs
kernel/src/_arch/aarch64/: context.rs  cpu.rs  errno.rs  exception.rs  interrupt.rs  mmu.rs  synronization_primitives.rs  timer.rs
kernel/src/_arch/aarch64/cpu/: boot.rs  boot.s  chainloader.ld  chainloader_boot.s  context_switch.s  defines.s  exception.s  kernel-boot.s  kernel.ld  macro.s  registers.rs  test-boot.s
kernel/src/_arch/aarch64/mmu/: address.rs  allocator.rs  cache.rs  config.rs  frame_allocator.rs  heap.rs  translation_entry.rs  translation_table.rs
kernel/src/bsp/: device_driver.rs  raspberrypi.rs
kernel/src/bsp/device_driver/: bcm_ic.rs  gic_400.rs  gpio.rs  mini_uart.rs  utils.rs
kernel/src/bsp/raspberrypi/: chainloader_kernel.ld  cpu.rs  driver.rs  kernel.ld  memory.rs  test-kernel.ld
kernel/src/scheduler/: context_switch.rs  task.rs
kernel/src/synchronization/: primitive.rs  spin.rs
kernel/src/utils/: bitfields.rs
kernel/src/wasm/: module.rs  module.wasm  parser.rs
kernel/src/wasm/module/: instructions.rs  opcode.rs  parser.rs
kernel/tests/: boot_test_string.rb
libraries/intrusive-rs/: Cargo.toml
libraries/intrusive-rs/src/: adapter.rs  lib.rs  rbtree.rs
libraries/test-macros/: Cargo.toml
libraries/test-macros/src/: lib.rs
libraries/test-types/: Cargo.toml
libraries/test-types/src/: lib.rs
(+1 files in other folders)
