[package]
name = "mingo"
version = "0.1.0"
authors = ["Li Shaowen"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
lock_api = "0.4.9"

# Plaftform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = {version = "9.x.x"}

