[package]
name = "mingo"
version = "0.1.0"
authors = ["Li Shaowen"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
lock_api = "0.4.9"
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

# Plaftform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = {version = "9.x.x"}

