[package]
name = "pi-os"
version = "0.1.0"
authors = ["Li Shaowen"]
edition = "2021"

[profile.release]
lto = true


[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]
test_build = ["qemu-exit"]

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[lib]
name = "libkernel"
path = "src/lib.rs"
test = true
crate-type = ["staticlib"]



##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
lock_api = "0.4.9"
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
qemu-exit = { version = "3.x.x", optional = true }
cfg-if = "1.0"
test-types = {path = "../libraries/test-types"}

# Plaftform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = {version = "9.x.x"}


[dev-dependencies]
test-macros = {path = "../libraries/test-macros"}
