[package]
name = "test-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.x"
quote = "1.x"
syn = {version = "1.x", features = ["full"]}
test-types = {path = "../test-types"}
proc-macro-error = "1.0.4"
trybuild = "1.0.80"
